# recipe-server

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md  add-joke.sh  askama.toml  dump.sql
.github/workflows/: ci.yaml
.sqlx/: query-007032ab88106cceba7af17b768bd28900331ba619bb7c72015a824a75ace805.json  query-0979f7f4e6d5bf009eb40b98afa9712a7f19eeeb18254e35fca1b76365635c4b.json  query-283700d90c670b1bbc72d2d574dadaf3278c780a6b48beeb32e0db8bb44155d8.json  query-2b952f6ef81fbffc29bd1a78de6b735bfe1d764f0daf8e8ac2ca83576d89a30e.json  query-3456de717b1f006bc1cdf6568c3a38bb29527a97a8802538eda43fd1f8bf1d8d.json  query-468d1119ac62d069f558bbb8390afb1687879362727c5123bd0baa0c1d663b75.json  query-4bbeb8934c499b567615d05d5877d7422ec17ee3b4ac7ccf0a88a22f6f3d6eae.json  query-534adbb7530778e7f01a547578e1550da43c4b660836db8328459182c9e7c6bc.json  query-58ee99551c0501693acc417b118a7a1cec5191af7e07921eac20e158e2835c3c.json  query-5a15036f5bce5fa5b3026bf6265bfbb51f8d433df73e0f76c6d9dc86c47a4991.json  query-62e326e55f0b5181222126b1ce4ef737ef0b220ad5151b4b351d144927c3ff73.json  query-67b7bc12d0d2db4df5c061f5adaaed184bab5ca20e52afc1580f535c22836433.json  query-9594dea9e8ac48311d57cbc4038e5761a511ed321b7c9fe29f6dd0005660137e.json  query-9dd0cbad987fa8322d04f9ed9d2c1a2f46e6bdea3af5d3196b9886a2e2896a84.json  query-9e5998dbf04b8d412b16bbc0de9ec848a6734d8c1c8d6310feaebd8e347d5b0d.json  query-a1a13404fcb04a0ff4fa2a76bb908ec1303f77a57a36c3c812af525e56cb01d7.json  query-a4e2d1a454f11bf803ede4c071349403d8d59556f459230ee2db72284642c8b5.json  query-af28951b9cca3b97ad8584da37111a7d750a63e7060d1a72dd5544b6e3bb1e6c.json  query-b69c21b84da5315f027f20ab219bebd08d932632ceff1c8bc64bf1337ec98d76.json  query-c86bc4b9e7236fc1602d2709a6df82b6387d313168f510eb5916e811ba44d9ec.json  query-dbd5a9c95301e7bb1aaa625575bf1f30316d2de150bc2bf4497cbe69ce45cf0f.json  query-f37d3b4247b39d3de421c1d5a427c17e3854f0c207cdb0dc48aa5fc3df2deb86.json  query-f5b888f646423158371303f88d49d0b358b8af86cfe5ff769ed5ab3312c2ef87.json
assets/static/: jokes.json  recipe-server.css  recipes.json
assets/templates/: index.html
db/: knock-knock.db-shm  knock-knock.db-wal  recipes.db
leptos_frontend/: Cargo.toml  index.html  recipe-server.css
leptos_frontend/src/: lib.rs  main.rs
migrations/: 0001_create.down.sql  0001_create.up.sql  0001_create_recipes_table.down.sql  0001_create_recipes_table.up.sql  0002_full_joke.down.sql  0002_full_joke.up.sql  0002_full_recipes.down.sql  0002_full_recipes.up.sql  0002_recipes.down.sql  0002_recipes.up.sql
secrets/: jwt_secret.txt
src/: api.rs  authjwt.rs  error.rs  joke.rs  main.rs  recipe.rs  templates.rs  web.rs
